TEST_PROGRAMS/INVALID/luke_emery-fertitta/parse_semicolon.min
# parsing error example - statement without terminating semicolon

var x: int;
x = 0;
print x
